--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "basic-auth": "^2.0.1",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.3.6",
