--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "tailwindcss-percentage-width": "^1.0.1",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
